project3/ingress-ssl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-example-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - https-example.foo.com
    secretName: https-example.foo.com
  rules:
  - host: https-example.foo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foo-svc
            port:
              number: 80
---
kind: Service
apiVersion: v1
metadata:
  name: foo-svc
spec:
  # type: ClusterIP
  # clusterIP: 10.233.10.10
  selector:
    app: foo-app
  ports:
    - port: 80
      targetPort: 8080
---
kind: Deployment
apiVersion: apps/v1
metadata: 
  name: foo-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: foo-app
  template:
    metadata:
      name: foo-pod
      labels:
        app: foo-app
    spec:
      containers:
      - name: foo-container
        image: whatwant/node-web:2.0
        ports:
        - containerPort: 8080
